# poetryIncorrectSubpackageAutoDetect

./: .gitignore  README.md  pyproject.toml
