[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["John Slemmer <john.slemmer@gmail.com>"]
exclude = [
    "**/test/**/*",
]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
